--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Study Assistant - Learn Smarter</title>
+    <title>Study_Buddy - Learn Smarter</title>
     <style>
         * {
             margin: 0;
@@ -696,7 +696,7 @@
             <div class="logo-section">
                 <div class="logo">🎓</div>
                 <div>
-                    <h1>AI Study Assistant</h1>
+                    <h1>Study_Buddy</h1>
                     <div class="subtitle">Learn Smarter, Study Better</div>
                 </div>
             </div>
