--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 
         <div class="config-note">
             <strong>⚙️ Setup:</strong> Update the Backend API URL above with your Render deployment URL. 
-            Example: <code>https://your-app-name.onrender.com</code> (without /api at the end)
+            Example: <code>https://study-buddy-2umt.onrender.com/</code> (without /api at the end)
         </div>
 
         <!-- Upload Section -->
